frontend/src/style.css
/* ... */
button {
  font-family: inherit;
  font-size: inherit;
}

button:focus-visible,
a:focus-visible {
  outline: 1px solid #ff00b8;
}

.list-reset {
  margin: 0;
  padding: 0;
  list-style: none;
}

.flex {
  display: flex;
  flex-wrap: wrap;
}

.container {
  margin: 0 auto;
  padding: 0;
  max-width: 768px;
  width: 100%;
}

.main {
  flex-direction: column;
  flex: 1;
  padding-bottom: 72px;
}

.lato-regular {
  font-family: "Lato", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.lato-semibold {
  font-family: var(--primary-font);
  font-weight: 600;
  /* Semibold */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: normal;
}

.roboto-regular {
  font-family: var(--secondary-font);
  font-weight: 400;
}

@font-face {
  font-family: "Lato";
  src: url("/fonts/Lato/Lato-Regular.woff2") format("woff2"),
    url(/fonts/Lato/Lato-Regular.woff) format("woff");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Lato";
  src: url("/fonts/Lato/Lato-Bold.woff2") format("woff2"),
    url(/fonts/Lato/Lato-Bold.woff) format("woff");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Roboto", sans-serif;
  src: url("/fonts/Roboto/Roboto-Regular.woff2") format("woff2"),
    url(/fonts/Roboto/Roboto-Regular.woff) format("woff");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

.body {
  margin: 0 auto;
  min-width: 380px;
  min-height: 100vh;
  font-family: var(--secondary-font);
  font-size: var(--medium-text);
  font-weight: 400;
  background-color: #f8f9f9;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

section:not(:last-child) {
  margin-bottom: 8px;
}

/* TEXT-SIZE */

.card__adress {
  margin: 0 0 4px;
  font-size: var(--medium-text);
  line-height: 1.25;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  /* максимум 2 строки */
  -webkit-box-orient: vertical;
  overflow: hidden;
  min-height: calc(1.25em * 2);
  /* фиксируем высоту под 2 строки */
  color: var(--dark-gray);
  font-style: normal;
}

.btn-text {
  font-family: var(--primary-font);
  font-size: 14px;
  font-weight: 500;
  line-height: 1.25;
}

.header {
  background-color: var(--dark-gray);
  width: 100%;
  min-width: 360px;
}

.navigation {
  position: fixed;
  background-color: #fff;
  border-top: 1px solid var(--light-gray-stroke);
  width: 100%;
  height: 72px;
  bottom: 0px;
  left: 0;
  right: 0;
  z-index: 1000;
}

.nav-links {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
}

.nav-item {
  justify-content: center;
}

.nav-link {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  color: var(--dark-gray);
  transition: color .3s ease;
}

.nav-label {
  position: relative;
  color: var(--dark-gray);
  opacity: 0;
  transform: translateY(4px);
  transition: transform .3s ease .3s, opacity .3s ease, color .3s ease;
}

.nav-link.active .nav-label {
  color: #3261ec;
  opacity: 1;
  transform: translateY(0);
}

.nav-link .svg {
  color: var(--dark-gray);
  width: 40px;
  height: 40px;
  transition: color .3s ease;
}

.nav-link.active .svg {
  color: #3261ec;
}

.header__container {
  justify-content: space-between;
  align-items: center;
  padding: 8px 16px;
}

.logo-mobile {
  display: none;
}

.slogan {
  position: relative;
  margin-right: 16px;
  color: white;
  font-size: 20px;
  font-family: var(--primary-font);
  font-weight: 400;
  font-style: normal;
}

.slogan::before {
  position: absolute;
  content: url(/icons/angle.svg);
  width: 4px;
  height: 4px;
  top: -16px;
  left: -16px;
}

.slogan::after {
  position: absolute;
  content: url(/icons/angle.svg);
  right: -16px;
  bottom: -16px;
  transform: rotate(180deg);
}

.hero {
  background-color: #000;
}

.hero__content {
  position: relative;
  background-image: url(/photos/hero-list.png);
  height: clamp(184px, 25vw, 360px);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  align-items: flex-start;
  flex-direction: column-reverse;
}

.hero__overlay {
  position: absolute;
  inset: 0;
  background: #000;
  opacity: 0;
  pointer-events: none;
  transition: opacity 600ms ease;
  z-index: 1;
}

.hero__overlay.is-active {
  opacity: 1;
}

/* чтобы текст был поверх */
.hero__content>*:not(.hero__overlay) {
  position: relative;
  top: 1px;
  z-index: 2;
}

.hero--list .hero__content {
  background-image: url("/photos/hero-list.png");
}

.hero--grid .hero__content {
  background-image: url("/photos/hero-grid.png");
}

.hero--map .hero__content {
  background-image: url("/photos/hero-map.png");
}

.h1-title {
  position: relative;
  top: 1px;
  padding: 8px 16px 0 16px;
  margin: 0;
  font-family: var(--primary-font);
  font-size: 32px;
  font-weight: 500;
  line-height: 1.25;
  letter-spacing: 0.01em;
  color: var(--black-text);
  background-color: #f8f9f9;
  border-top-right-radius: 8px;
  border-bottom: 1px solid #f8f9f9;
}

.h2-title {
  margin: 0 0 8px;
  font-size: 24px;
  font-weight: 500;
  line-height: 1.25;
}

.h3-title {
  font-size: 18px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0 0 8px;
}

/* search */

.search {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.search__field {
  display: flex;
  align-items: center;
  gap: 8px;
  border: 1px solid var(--dark-gray);
  border-radius: 12px;
  padding: 10px 12px;
  background: white;
}

.search__label {
  font-size: var(--small-text);
  color: var(--dark-gray);
}

.search__input {
  flex: 1;
  border: none;
  outline: none;
}

.search__input[placeholder] {
  color: var(--light-gray-text);
}

.search__icon {
  display: flex;
}
/* ... */

